[gd_scene load_steps=5 format=3 uid="uid://bqxku6wmxqggp"]

[ext_resource type="FontFile" uid="uid://c2x8hf50ls7nj" path="res://assets/fonts/Minecraftia-Regular.ttf" id="1_nt7q6"]
[ext_resource type="Script" uid="uid://d4hrk0uwlkwqp" path="res://scripts/ui.gd" id="2_x4jx1"]
[ext_resource type="FontFile" uid="uid://bj1t47sbpquip" path="res://assets/fonts/THSarabunNew.ttf" id="3_yev5y"]

[sub_resource type="Theme" id="Theme_x4jx1"]
default_font = ExtResource("1_nt7q6")
default_font_size = 24

[node name="UI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_x4jx1")
script = ExtResource("2_x4jx1")

[node name="StartGame" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.20392157, 0.20392157, 0.20392157, 0.5686275)

[node name="GameName" type="Label" parent="StartGame"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -126.0
offset_top = 93.0
offset_right = 126.0
offset_bottom = 135.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 48
text = "Beach Ball Rolling"
horizontal_alignment = 1

[node name="Tutorial" type="Label" parent="StartGame"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -102.0
offset_top = -120.5
offset_right = 102.0
offset_bottom = -33.5
grow_horizontal = 2
grow_vertical = 2
text = "W A S D to Move
* Restart Button might not work"
horizontal_alignment = 1

[node name="Countdown" type="Label" parent="StartGame"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = 42.0
offset_right = 20.0
offset_bottom = 98.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 32
text = "3"
horizontal_alignment = 1

[node name="StartButton" type="Button" parent="StartGame"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -4.0
offset_top = -4.0
offset_right = 4.0
offset_bottom = 4.0
grow_horizontal = 2
grow_vertical = 2
text = "Start"

[node name="InGame" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0.105882354)

[node name="GameTimer" type="Label" parent="InGame"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -60.0
offset_right = 60.0
offset_bottom = 84.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 48
text = "0:00"
horizontal_alignment = 1

[node name="RestartMidGameButton" type="Button" parent="InGame"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -8.0
offset_top = -8.0
grow_horizontal = 0
grow_vertical = 0
text = "Restart"

[node name="Finish" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.20391053, 0.20391053, 0.20391053, 0.5686275)

[node name="Label" type="Label" parent="Finish"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -27.0
offset_top = 195.0
offset_right = 27.0
offset_bottom = 237.0
grow_horizontal = 2
text = "You beat the game!
Your finish time :"
horizontal_alignment = 1

[node name="FinishTime" type="Label" parent="Finish"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -21.0
offset_right = 20.0
offset_bottom = 21.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 48
text = "0:00"
horizontal_alignment = 1

[node name="RestartButton" type="Button" parent="Finish"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -4.0
offset_top = 69.0
offset_right = 4.0
offset_bottom = 77.0
grow_horizontal = 2
grow_vertical = 2
text = "Play again"

[node name="CountdownTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="OneSecTimer" type="Timer" parent="."]

[node name="Name" type="Label" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -154.0
offset_top = -48.0
offset_right = 154.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_yev5y")
theme_override_font_sizes/font_size = 36
text = "วัชรวิศว์ น้อยเมล์ 673380059-1"
horizontal_alignment = 1

[connection signal="pressed" from="StartGame/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="InGame/RestartMidGameButton" to="." method="_on_restart_mid_game_button_pressed"]
[connection signal="pressed" from="Finish/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="timeout" from="CountdownTimer" to="." method="_on_countdown_timer_timeout"]
[connection signal="timeout" from="OneSecTimer" to="." method="_on_one_sec_timer_timeout"]
